--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Montserrat+Alternates&display=swap");
+
 :root {
     /* change the values below to your colors from your palette */
     --primary-color: #324f85;
@@ -6,7 +8,8 @@
     --accent2-color: #d6d6d6;
 
     /* change the values below to your chosen font(s) */
-    --heading-font: "Cinzel Decorative";
+    --heading-font: "Cinzel Decorative", serif, "Playfair Display", "Lora", "Cormorant Garamond", "EB Garamond", sans-serif;
+
     --paragraph-font: Montserrat, Helvetica, sans-serif;
 
     /* these colors below should be chosen from among your palette colors above */
@@ -26,12 +29,15 @@
     margin: 0 auto;
 }
 
-nav a,
 #hero-msg h1,
 #hero-msg h4,
 .button-box,
 main section {
     text-align: center;
+}
+
+main section img {
+    box-sizing: border-box;
 }
 
 #background {
@@ -43,9 +49,21 @@ a {
     color: white;
 }
 
+.card-img {
+    border: 10px solid var(--nav-background-color);
+}
+
 body {
     background-color: #fcfbfb;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
+
+h2 {
+    margin: 0;
+}
+
 header,
 footer {
     background-color: var(--primary-color);
@@ -53,27 +71,20 @@ footer {
     font-size: 1.2em;
 }
 
-footer p a:hover {
-    text-decoration: underline;
-}
-
-.book {
+/* .book {
     background-color: black;
     color: white;
-}
+} */
 
-.msg {
-    background-color: var(--secondary-color);
-    color: white;
-}
-
-.home-title,
-nav a:hover {
-    color: #d9c2a3;
-}
-.msg h2,
-h4 {
-    color: blue;
+.book,
+.join {
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover,
@@ -82,15 +93,72 @@ h4 {
     color: #d9c2a3;
 }
 
-.icon {
-    width: 80px;
+.msg p {
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 
-nav a,
-.book,
-.join,
+.msg {
+    background-color: var(--secondary-color);
+    color: white;
+    line-height: 1.5em;
+    padding: 35px;
+    margin-top: 100px;
+}
+
+.home-title,
+nav a:hover {
+    color: #d9c2a3;
+}
+
+.msg h2,
+h4 {
+    color: blue;
+}
+
+.home-title {
+    font-family: var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.msg h2 {
+    font-family: var(--heading-font);
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.rivers-card,
+.camping-card,
+.rapids-card {
+    margin: 200px 0;
+}
+
+footer {
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
 footer a {
     text-decoration: none;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fcfbfb;
+    text-align: center;
+    padding: 35px;
 }
 
 #hero-img {
