--- a/positionstyles.css
+++ b/positionstyles.css
@@ -24,10 +24,13 @@
     width: 100%;
     height: 100px;
     background-color: blue;
+    grid-column: 1/3;
 }
 /* Activity 2 styles */
 .content2 {
-    /* This is the parent of the activity 2 boxes. */
+    display: grid;
+    grid-template-columns: repeat(5, 50px);
+    grid-template-rows: repeat(6 100px);
 }
 .red2 {
     width: 100px;
@@ -38,73 +41,86 @@
     width: 100px;
     height: 100px;
     background-color: green;
+    grid-column: 2/3;
+    grid-row: 1/3;
 }
 .yellow2 {
     width: 100px;
     height: 100px;
     background-color: gold;
+    grid-column: 3/4;
+    grid-row: 3/4;
 }
 .blue2 {
     width: 100px;
     height: 100px;
     background-color: blue;
+    grid-column: 4/5;
+    grid-row: 4/5;
 }
 /* Activity 3 styles */
 .content3 {
-    /* This is the parent of the activity 3 boxes. */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 60px;
 }
 .red3 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: red;
+    grid-column: 1/3;
 }
 .green3 {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 200px;
     background-color: green;
+    grid-column: 1/2;
 }
 .yellow3 {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 200px;
     background-color: gold;
+    grid-column: 2/3;
 }
 .blue3 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: blue;
+    grid-column: 1/3;
 }
 /* Activity 4 styles */
 .content4 {
-    /* This is the parent of the activity 4 boxes. */
-    height: 400px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row: repeat(4, 1fr);
 }
 .red4 {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     background-color: red;
+    grid-row: 1/5;
 }
 .green4 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: green;
 }
 .yellow4 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: gold;
 }
 .blue4 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: blue;
 }
 /* Activity 5 styles */
 .content5 {
     /* This is the parent of the activity 5 boxes. */
-    height: 400px;
 }
 .red5 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: red;
 }
@@ -112,40 +128,55 @@
     width: 100px;
     height: 100px;
     background-color: green;
+    float: left;
 }
 .yellow5 {
     width: 100px;
     height: 100px;
     background-color: gold;
+    width: 100%;
+    height: 150px;
 }
 .blue5 {
-    width: 100px;
+    width: 100%;
     height: 100px;
     background-color: blue;
 }
 /* Activity 6 styles */
 .content6 {
-    /* This is the parent of the activity 6 boxes. */
+    display: grid;
+    grid-template-columns: repeat(5, 100px);
+    grid-template-rows: repeat(5, 100px);
 }
 .red6 {
-    width: 100px;
-    height: 100px;
+    width: 150%;
+    height: 200px;
     background-color: red;
+    grid-column: 1/5;
+    grid-row: 1/3;
 }
 .green6 {
-    width: 100px;
-    height: 100px;
+    width: 70%;
+    height: 300px;
     background-color: green;
+    grid-column: 1/5;
+    grid-row: 5/7;
+    z-index: 1;
 }
 .yellow6 {
-    width: 100px;
-    height: 100px;
+    width: 40%;
+    height: 500px;
     background-color: gold;
+    grid-column: 6;
+    grid-row: 3/7;
+    z-index: 1;
 }
 .blue6 {
-    width: 100px;
-    height: 100px;
+    width: 45%;
+    height: 500px;
     background-color: blue;
+    grid-column: 3/7;
+    grid-row: 2/6;
 }
 
 /* Do not make any changes below here */
