--- a/positionstyles.css
+++ b/positionstyles.css
@@ -29,31 +29,33 @@
 /* Activity 2 styles */
 .content2 {
     display: grid;
-    grid-template-columns: repeat(5, 50px);
-    grid-template-rows: repeat(6 100px);
+    grid-template-columns: repeat(10, 50px);
+    grid-template-rows: repeat(7, 100px);
 }
 .red2 {
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 150px;
     background-color: red;
-}
-.green2 {
-    width: 100px;
-    height: 100px;
-    background-color: green;
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/3;
 }
+.green2 {
+    width: 145px;
+    height: 150px;
+    background-color: green;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
 .yellow2 {
-    width: 100px;
-    height: 100px;
+    width: 145px;
+    height: 150px;
     background-color: gold;
     grid-column: 3/4;
-    grid-row: 3/4;
+    grid-row: 3/6;
 }
 .blue2 {
-    width: 100px;
-    height: 100px;
+    width: 145px;
+    height: 150px;
     background-color: blue;
     grid-column: 4/5;
     grid-row: 4/5;
@@ -66,25 +68,25 @@
 }
 .red3 {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: red;
     grid-column: 1/3;
 }
 .green3 {
     width: 100%;
-    height: 200px;
+    height: 300px;
     background-color: green;
     grid-column: 1/2;
 }
 .yellow3 {
     width: 100%;
-    height: 200px;
+    height: 300px;
     background-color: gold;
     grid-column: 2/3;
 }
 .blue3 {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: blue;
     grid-column: 1/3;
 }
@@ -96,23 +98,23 @@
 }
 .red4 {
     width: 100%;
-    height: 100%;
+    height: 450px;
     background-color: red;
     grid-row: 1/5;
 }
 .green4 {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: green;
 }
 .yellow4 {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: gold;
 }
 .blue4 {
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: blue;
 }
 /* Activity 5 styles */
